--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ footer {
     display: inline-block;
     margin: 35px 0px 0px 7%;
     border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .5);
 }
 .block2 {
     margin-top: 20px;
@@ -227,7 +228,13 @@ footer {
     line-height: 0.95;
     font-size: 15px;
     border-radius: 0 0 5px 5px;
+    transition: 2s
 }
+.inblock:hover {
+    height: 50px;
+    transform: translate(0, -10px)
+}
+
 .first_block {
     margin: 35px 0px 0px 0;
 }
