--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ button {
     text-align: center;
     font: 400 1em/1.38 'Arial Black';
     color: rgb(0, 0, 0);
+    transition: 0.5s;
 }
 button:hover {
     background-color: rgb(178, 178, 178);
@@ -65,6 +66,7 @@ button:hover {
     box-shadow: 0 2px 5px rgba(0, 0, 0, .5);
     width: 35%;
     margin-left: 33%;
+    transition: 0.5s;
 
 }
 .block_head {
@@ -108,7 +110,6 @@ button:hover {
 footer {
     height: 65px;
     background-color: rgb(248, 205, 0);
-    box-shadow: 0 5px 5px 5px rgba(0, 0, 0, .5);
 }
 .footer-box {
     width: 56%;
