--- a/style.css
+++ b/style.css
@@ -178,11 +178,12 @@ footer {
     text-align: center;
 }
 .text4 {
-    font-size: 1em;
+    font-size: 0.99em;
     margin-left: 170px;
     text-align: left;
 }
 .small {
+    margin-left: 170px;
     font-size: 0.75em;
 }
 .text5 {
@@ -204,7 +205,7 @@ footer {
     width: 100%;
     height: 130px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, .5);
-    margin: 10px 10px 0 0;
+    margin: 20px 20px 0 0;
     text-align: left;
     position: relative;
     background: rgb(225, 225, 225) 50%/cover;
