--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
     color: rgb(0, 0, 0);
     font: 400 1em/1.38 'Arial Black';
 }
+body button::selection, div::selection, img::selection, p::selection, h1::selection, h2::selection{
+    color: black;
+    background: rgb(248, 205, 0)
+}
+
 .header1 {
   height: 65px;
   background-color: rgb(248, 205, 0);
