--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ button {
     text-align: center;
     font: 400 1em/1.38 'Arial Black';
     color: rgb(0, 0, 0);
+    background-color: rgb(225, 225, 225);
     transition: 0.5s;
 }
 button:hover {
